syntax = "proto3";

package shortener_v1;

option go_package = "shortener.v1";

import "google/protobuf/timestamp.proto";


service Shortener {
  rpc CreateLink(CreateLinkRequest) returns (CreateLinkResponse);
  rpc FetchLink(FetchLinkRequest) returns (FetchLinkResponse);
}

message CreateLinkRequest {
  string url = 1;
}

message CreateLinkResponse {
  string url = 1;
  string alias = 2;
  google.protobuf.Timestamp expired_at = 3;
}

message FetchLinkRequest {
  string alias = 1;
}

message FetchLinkResponse {
  string url = 1;
  string alias = 2;
  google.protobuf.Timestamp expired_at = 3;
}
